# agentic-coding-training-exercise

./: .gitignore  INTERFACE_GARANTIE.md  PLAN.md  README.md  TESTS_FINAL_REPORT.txt  TESTS_INDEX.md  TEST_REPORT_GARANTIE.md  TEST_SUMMARY.md  diagnostic-i18n.md  package-lock.json  package.json  test-garantie.sh
client/: index.html
client/i18n/: en.json  fr.json  it.json  oc.json
scripts/: db-empty.ts  db-init.ts  db-seed.ts  db-verify.ts  server-runner.js
scripts/lib/: api-tests.js  runner.js  servers.js
server/: README-verification.md
server/api/: README.md  openapi.yaml  validate.sh
server/database/: db.sqlite
server/go/: .env.example  .gitignore  Makefile  README.md  go.mod  go.sum
server/kotlin/: .env.example  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
server/python/: .env.example  .gitignore  README.md  pyproject.toml
server/python/src/: __init__.py  main.py
server/python/src/application/use_cases/: __init__.py  create_item.py  delete_item.py  get_item.py  list_items.py  patch_item.py  update_item.py
server/python/src/domain/entities/: __init__.py  enums.py  item.py
server/python/src/domain/repositories/: __init__.py  item_repository.py
server/python/src/domain/value_objects/: __init__.py  item_image.py
server/python/src/infrastructure/http/: __init__.py  dependencies.py  exceptions.py  models.py  routes.py
server/python/src/infrastructure/persistence/: __init__.py  sqlite_item_repository.py
server/python/src/shared/: config.py  cursor.py  errors.py
server/python/tests/: __init__.py  conftest.py
server/python/tests/integration/: test_http_endpoints.py
server/python/tests/integration/infrastructure/: test_sqlite_item_repository.py
server/python/tests/unit/application/: test_create_item_use_case.py  test_get_item_use_case.py
server/python/tests/unit/domain/: test_enums.py  test_item_entity.py
server/swift/: .env.example  .gitignore  Package.resolved  Package.swift  README.md
server/typescript/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  (+1 more)
tuition/: .gitignore
(+172 files in other folders)
